--- a/index.html
+++ b/index.html
@@ -239,19 +239,18 @@
                         </button>
                     </form>
                 </div>
-                <img src="ASSETS/subscribe-person.jpg" alt="Suscribirse" class="subscribe-img">
+                <img src="ASSETS/email.png" alt="Suscribirse" class="subscribe-img">
             </div>
             <div class="testimonial-box">
                 <button class="testimonial-arrow">&#8592;</button>
                 <div class="testimonial-content">
-                    <img src="ASSETS/user.jpg" alt="Usuario" class="testimonial-avatar">
+                    <img src="ASSETS/profile.jpeg" alt="Usuario" class="testimonial-avatar">
                     <div>
-                        <strong>DIANA ROSIE</strong> - Diseñadora Creativa
+                        <strong>FERNANDO ROSIE</strong> - Diseñador Creativo
                         <p>" Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de la industria... "</p>
                     </div>
                 </div>
                 <button class="testimonial-arrow">&#8594;</button>
-                <img src="ASSETS/lamp.png" alt="Lámpara" class="testimonial-lamp">
             </div>
         </section>
     </main>
