--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
         </div>
         <div class="payment-methods">
             <img src="ASSETS/paypal.png" alt="PayPal">
-            <img src="ASSETS/amex.png" alt="American Express">
+            <img src="ASSETS/american.png" alt="American Express">
+            <img src="ASSETS/amazon.png" alt="MasterCard">
             <img src="ASSETS/visa.png" alt="Visa">
         </div>
         <div class="footer-bottom">
