--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Umbra - Muebles Modernos y Decoración para el Hogar">
-    <meta name="keywords" content="muebles, decoración del hogar, diseño moderno, umbra">
     <title>Umbra - Muebles Modernos & Decoración</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <script src="script.js" defer></script>
@@ -184,6 +182,7 @@
                 </div>
             </div>
         </section>
+            <img src="ASSETS/under.png" alt="Marcas">
 
         <!-- Blog Section -->
         <section class="furniture-section">
