--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <nav class="navbar">
             <div class="navbar-left">
@@ -39,12 +38,11 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
+
         <section class="hero">
             <img src="ASSETS/mueble.jpg" alt="Muebles Destacados" class="hero-img">
         </section>
 
-        <!-- Featured Products Grid -->
         <section class="products-grid">
             <div class="product-card green-bg">
                 <div class="product-info">
@@ -81,8 +79,8 @@
             </div>
         </section>
 
-        <!-- Top Products Section -->
         <section class="tops-products-section">
+            <h2 class="vertical">UNBRA FURNITURE</h2>
             <h2 class="tops-title">PRODUCTOS DESTACADOS</h2>
             <p class="tops-subtitle">Lo Mejor de 2016</p>
             <div class="tops-products-grid">
@@ -153,7 +151,6 @@
             </div>
         </section>
 
-        <!-- Promotions Section -->
         <section class="product-promotions">
             <div class="promotion-left">
                 <h2>OFERTAS CALIENTES ESTA SEMANA</h2>
@@ -182,9 +179,8 @@
                 </div>
             </div>
         </section>
-            <img src="ASSETS/under.png" alt="Marcas">
+            <img clas="under"src="ASSETS/under.png" alt="Marcas">
 
-        <!-- Blog Section -->
         <section class="furniture-section">
             <h2 class="tops-title">Blog de Muebles</h2>
             <p class="tops-subtitle">Últimas Noticias de la Semana</p>
@@ -214,7 +210,6 @@
             </div>
         </section>
 
-        <!-- Image Gallery Section -->
         <section class="image-gallery">
             <div class="image-section">
                 <img src="ASSETS/1.png" alt="Estante con objetos">
@@ -225,7 +220,6 @@
             </div>
         </section>
 
-        <!-- Newsletter and Testimonials Section -->
         <section class="subscribe-testimonial-section">
             <div class="subscribe-box">
                 <div class="subscribe-content">
@@ -254,7 +248,6 @@
         </section>
     </main>
 
-    <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-column">
